  id which caused it to incorrectly report roles (bug #44414)
- fixed Visual Studio 2005 solution so that it builds  
- fixed potential endless loop in CompressedStream in case where end of stream occurs before 
  packet is fully read (bug #43678)
- fixed ReservedWords schema collection to not incorrectly include blank words and to use the
  right column name
- fixed display of trigger names  
  
Version 5.2.6
- cleaned up how stored procedure execution operated when the user does or does not have execute privs
  on the routine (bug #40139)
- fixed problem with datetime formatting that causes an extra space to be included between the
  date and time when sent to the server (bug #41021)
- fixed sproc parameter parsing so that a space between the type and size spec would not cause a problem
  (bug #41034)
- removed code from profile provider that overrode Name and Description properties in error.  This had the
  effect of not allowing you to override those values in the web.config (ug #40871)    
- fixed "metadatacollections" collection to include foreign key columns      
- fixed GetAllProfiles (which is used by several methods).  It had a typo in the SQL and was not
  including several important columns (bug #41654)      
- fixed problem where the core method GetUser was not properly checking the application id
  when retrieving user id values.  This would mean that in some cases methods like
  ValidateUser would return success when they shouldn't.  (bug #42574)  This triggered several
  other cleanups in all the providers   
- fixed problem with execution of LOAD DATA LOCAL INFILE (which also affected MySqlBulkLoader).
  When the driver encountered some type of error opening the local file for transport it would
  still attempt to close the file which would yield a null reference exception (bug #43332)      
- fixed Sql null value exception when an attempt was made to reset the password and 
  require question and answer was false.  (bug #41408)  