@@ -13,6 +13,8 @@ Version 5.2.7
 - fixed ReservedWords schema collection to not incorrectly include blank words and to use the
   right column name
 - fixed display of trigger names  
+- restructured the connection open error handling so that socket exceptions come through 
+  as the inner exception (bug #45021)  
   
 Version 5.2.6
 - cleaned up how stored procedure execution operated when the user does or does not have execute privs
